TRY TO FIX WIDTH AFTER COLLAPSE BUTTON CLICK

--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,7 @@ html {
 }
 .app {
   position: relative;
+  width: 100%;
 }
 .hidden {
   display: none;
@@ -49,6 +50,9 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: var(--roboto-regular-14);
+  
+  overflow: hidden;
+  
 }
 h1,
 h3,
@@ -151,7 +155,7 @@ main {
   top: 0;
   transform: translateX(0px);
   width: 100%;
-  height: 100vh;
+  height: 100%;
   transition: transform ease 0.3s;
 }
 .container {
@@ -171,18 +175,29 @@ main {
   font-size: var(--roboto-regular-15);
   letter-spacing: var(--roboto-regular-char-spacing);
 }
-.markDownInput {
+/* .markDownEditor{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: start;
+  padding: 1.6rem;
+  justify-content: center;
+} */
+.markDownTextArea {
+  padding: 1.6rem;
   outline: none;
   border: none;
   width: 100%;
   height: 100vh;
+  overflow: visible;
+  resize: none;
   background-color: var(--slate-400);
 }
 
 /* side bar */
 
 article {
-  position: fixed;
+  position: absolute;
   transition: transform ease 0.3s;
   top: 0;
   transform: translateX(-250px);
@@ -192,7 +207,7 @@ article {
   flex-direction: column;
   justify-content: space-between;
   padding: 2rem 2rem;
-  height: 100vh;
+  height: 100%;
   width: 25rem;
 }
 article > h1 {
@@ -284,14 +299,14 @@ article > h1 {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(5px);
 }
 
 .modal-content {
   background-color: #fff;
-  margin: 50% auto;
+  margin: 20% auto;
   padding: 1.6rem;
   border: 1px solid #888;
   width: 90%;
@@ -302,9 +317,13 @@ article > h1 {
   flex-direction: column;
   gap: 1.6rem;
 }
-
+.modal-content > h1 {
+  color: var(--slate-900);
+  font-size: 2rem;
+  letter-spacing: var(--roboto-regular-char-spacing);
+}s
 .modal-content > p {
-  line-height: 1.5;
+  line-height: 1.6;
 }
 .modal-footer {
   display: flex;
